--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="styles.css" />
     <title>Vijorich</title>
 </head>
 
 <body>
-    <h1 align="center" style="font-family:courier;">First page test</h1>
-    <p align="center" style="font-family:courier;">
+    <h1>First page test</h1>
+    <p>
         Im <a href="https://github.com/Vijorich"> Viktor "Vijor" Antonov</a> That page is made for experiments with github pages
     </p>
 </body>
