--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css" />
-    <title>Vijorich</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap')
+  </style>
+  <link rel="stylesheet" href="styles.css" />
+  <title>Vijorich</title>
 </head>
 
 <body>
-    <h1>First page test</h1>
-    <p>
-        Im <a href="https://github.com/Vijorich"> Viktor "Vijor" Antonov</a> That page is made for experiments with github pages
-    </p>
+  <h1>First page test</h1>
+  <p>
+    Im <a href="https://github.com/Vijorich"> Viktor "Vijor" Antonov</a> That page is made for experiments with github pages
+  </p>
 </body>
 
 </html>
