--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
 
 <head>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap')
-  </style>
+
   <link rel="stylesheet" href="styles.css" />
   <title>Vijorich</title>
 </head>
@@ -11,8 +9,33 @@
 <body>
   <h1>First page test</h1>
   <p>
-    Im <a href="https://github.com/Vijorich"> Viktor "Vijor" Antonov</a> That page is made for experiments with github pages
+    Im  That page is made for experiments with github pages
   </p>
 </body>
 
+</html>
+
+<html>
+<head>
+  <style> @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap') </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="script.js"></script>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Welcome</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contacts</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <h1>Welcome to My Portfolio</h1>
+    <p>I am <a href="https://github.com/Vijorich"> Viktor "Vijor" Antonov</a>, .NET developer.</p>
+    <a href="#" class="btn">View Portfolio</a>
+  </section>
+</body>
 </html>
