--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </nav>
   </header>
   <section>
-    <h1>Welcome to My Portfolio</h1>
-    <p>I am <a href="https://github.com/Vijorich"> Viktor "Vijor" Antonov</a>, .NET developer.</p>
-    <a href="#" class="btn">View Portfolio</a>
+    <h1>Hi!</h1>
+    <p>I am Viktor "Vijor" Antonov, .NET developer.</p>
+    <a href="https://github.com/Vijorich" class="btn">My accoun</a>
   </section>
 </body>
 </html>
