--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <style> @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,900;1,900&display=swap') </style>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vijor</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">Welcome</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contacts</a></li>
-      </ul>
-    </nav>
+  <header class="header">
+    <div class="container">
+
+        <nav class="header__nav nav">
+          <a href="#!" class="nav__logo">Vijor</a>
+          <ul class="nav-list">
+            <li class="nav-list__item"><a class="nav-list__link" href="#!">Description</a></li>
+            <li class="nav-list__item"><a class="nav-list__link" href="#!">Projects</a></li>
+            <li class="nav-list__item"><a class="nav-list__link" href="#!">Test</a></li>
+            <li class="nav-list__item"><a class="nav-list__link" href="#!">Sample</a></li>
+            <li class="nav-list__item"><a class="nav-list__link" href="#!">Hihihi</a></li>
+          </ul>
+        </nav>
+
+      <div class="header__content">
+        <h1 class="header_title">I'm Victor Antonov</h1>
+        <p> More of a student than a developer, but I'm trying hard </p>
+        <div class="header__btn">
+          <a href="https://github.com/Vijorich" class="btn">My github account</a>  
+        </div>
+      </div>
+    </div>
   </header>
-  <section>
-    <h1>Hi!</h1>
-    <p>I am Viktor "Vijor" Antonov, .NET developer.</p>
-    <a href="https://github.com/Vijorich" class="btn">My accoun</a>
-  </section>
 </body>
 </html>
