Button on hover effects

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 class="header_title">I'm Victor Antonov</h1>
         <p> More of a student than a developer, but I'm trying hard </p>
         <div class="header__btn">
-          <a href="https://github.com/Vijorich" class="btn">My github account</a>  
+          <a href="https://github.com/Vijorich" class="btn text">My github account</a>
         </div>
       </div>
     </div>
