--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <div class="header__content">
         <h1 class="header_title">I'm Victor Antonov</h1>
-        <p> More of a student than a developer, but I'm trying hard </p>
+        <p> Hello World! </p>
         <div class="header__btn">
           <a href="https://github.com/Vijorich" class="btn text">My github account</a>
         </div>
