--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
         <nav class="header__nav nav">
           <a href="#!" class="nav__logo">Vijor</a>
           <ul class="nav-list">
-            <li class="nav-list__item"><a class="nav-list__link" href="#!">Description</a></li>
-            <li class="nav-list__item"><a class="nav-list__link" href="#!">Projects</a></li>
-            <li class="nav-list__item"><a class="nav-list__link" href="#!">Test</a></li>
-            <li class="nav-list__item"><a class="nav-list__link" href="#!">Sample</a></li>
-            <li class="nav-list__item"><a class="nav-list__link" href="#!">Hihihi</a></li>
+            <li class="nav-list__item"><a class="nav-list__link" href="https://github.com/Vijorich?tab=repositories">Repos</a></li>
           </ul>
         </nav>
 
