Cards and responsive design tests

--- a/index.html
+++ b/index.html
@@ -11,19 +11,43 @@
     <div class="container">
 
         <nav class="header__nav nav">
-          <a href="#!" class="nav__logo">Vijor</a>
+          <a href="#!" class="nav__logo"></a>
           <ul class="nav-list">
-            <li class="nav-list__item"><a class="nav-list__link" href="https://github.com/Vijorich?tab=repositories">Repos</a></li>
+            <li class="nav-list__item"><a class="nav-list__link" href="https://github.com/Vijorich?tab=repositories"></a></li>
           </ul>
+          <a href="#!" class="nav__logo"></a>
         </nav>
 
       <div class="header__content">
-        <h1 class="header_title">I'm Victor Antonov</h1>
+        <h1 class="header_title">I'm Victor "Vijor" Antonov</h1>
         <p> Hello World! </p>
-        <div class="header__btn">
-          <a href="https://github.com/Vijorich" class="btn text">My github account</a>
-        </div>
       </div>
+
+      <div class="header__card">
+          <div class="card">
+            <a class="card__link" href="https://github.com/Vijorich/PagesTest">
+              <div class="card__content">
+                <p> This </p>
+                <p> Site </p>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a class="card__link" href="https://github.com/Vijorich/Universal-windows-utility-console">
+              <div class="card__content">
+                <p> Universal </p>
+                <p> Windows </p>
+                <p> Utility </p>
+                <p> Console </p>
+              </div>
+            </a>
+          </div>
+      </div>
+
+      <footer class="footer__header">
+        <p class="footer__author">made by <a class="footer__link" target="_blank" href="https://github.com/Vijorich">vijor</a></p>
+      </footer>
+
     </div>
   </header>
 </body>
