--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vijor</title>
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.svg">
 </head>
 <body>
   <header class="header">
