--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
           </div>
       </div>
 
+      <div class="details__head">
+        <details>
+          <summary>Epcot Center</summary>
+          <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+        </details>
+      </div>
+
       <footer class="footer__header">
         <p class="footer__author">made by <a class="footer__link" target="_blank" href="https://github.com/Vijorich">vijor</a></p>
       </footer>
