--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" prefers-color-scheme="dark">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,56 +8,86 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="icon" type="image/x-icon" href="./assets/images/favicon.svg">
 </head>
+
 <body>
   <header class="header">
     <div class="container">
 
-        <nav class="header__nav nav">
-          <a href="#!" class="nav__logo"></a>
-          <ul class="nav-list">
-            <li class="nav-list__item"><a class="nav-list__link" href="https://github.com/Vijorich?tab=repositories"></a></li>
-          </ul>
-          <a href="#!" class="nav__logo"></a>
-        </nav>
+      <nav class="header__nav nav">
+        <a href="#!" class="nav__logo"></a>
+        <ul class="nav-list">
+          <li class="nav-list__item"><a class="nav-list__link" href="https://github.com/Vijorich?tab=repositories"></a>
+          </li>
+        </ul>
+        <a href="#!" class="nav__logo"></a>
+      </nav>
 
       <div class="header__content">
-        <h1 class="header_title">I'm Victor "Vijor" Antonov</h1>
+        <h1 class="header_title">Виктор "Vijor" Антонов</h1>
         <p> Hello World! </p>
       </div>
 
       <div class="header__card">
-          <div class="card">
-            <a class="card__link" href="https://github.com/Vijorich/PagesTest">
-              <div class="card__content">
-                <p> This </p>
-                <p> Site </p>
-              </div>
-            </a>
-          </div>
-          <div class="card">
-            <a class="card__link" href="https://github.com/Vijorich/Universal-windows-utility-console">
-              <div class="card__content">
-                <p> Universal </p>
-                <p> Windows </p>
-                <p> Utility </p>
-                <p> Console </p>
-              </div>
-            </a>
-          </div>
+        <div class="card">
+          <a class="card__link" href="https://github.com/Vijorich/PagesTest">
+            <div class="card__content">
+              <p> Этот </p>
+              <p> Сайт </p>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a class="card__link" href="https://github.com/Vijorich/Universal-windows-utility-console">
+            <div class="card__content">
+              <p> Universal </p>
+              <p> Windows </p>
+              <p> Utility </p>
+              <p> Console </p>
+            </div>
+          </a>
+        </div>
       </div>
 
       <div class="details__head">
         <details>
-          <summary>Epcot Center</summary>
-          <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+          <summary>Панграммы</summary>
+          <p>Большой набор панграмм приводит в своём «Ководстве» А. А. Лебедев:<br />
+            <br />
+            Без «ъ» или «ё» используются для проверки телеграфной связи (в ней данные буквы не применяются):<br />
+            <br />
+            В чащах юга жил бы цитрус? Да, но фальшивый экземпляр!<br />
+            Друг мой эльф! Яшке б свёз птиц южных чащ!<br />
+            <br />
+            Каждая буква по одному разу:<br />
+            <br />
+            Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч.<br />
+            Шеф взъярён тчк щипцы с эхом гудбай Жюль.<br />
+            Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф.<br />
+            Экс-граф? Плюш изъят. Бьём чуждый цен хвощ!<br />
+            Эх, чужак! Общий съём цен шляп (юфть) — вдрызг!<br />
+            Эх, чужд кайф, сплющь объём вши, грызя цент.<br />
+            Чушь: гид вёз кэб цапф, юный жмот съел хрящ.<br />
+            <br />
+            Используемые в операционных системах:<br />
+            <br />
+            Microsoft использует в fontview.exe для кириллических шрифтов без частицы «же» панграмму: Съешь [же] ещё
+            этих мягких французских булок да выпей чаю.<br />
+            В KDE используется панграмма: Широкая электрификация южных губерний даст мощный толчок подъёму сельского
+            хозяйства.<br />
+            В GNOME используется панграмма: В чащах юга жил бы цитрус? Да, но фальшивый экземпляр!<br />
+            В macOS используется панграмма: Вступив в бой с шипящими змеями — эфой и гадюкой — маленький, цепкий,
+            храбрый ёж чуть не съел их.
+          </p>
         </details>
       </div>
 
       <footer class="footer__header">
-        <p class="footer__author">made by <a class="footer__link" target="_blank" href="https://github.com/Vijorich">vijor</a></p>
+        <p class="footer__author">made by <a class="footer__link" target="_blank"
+            href="https://github.com/Vijorich">vijor</a> with 💖</p>
       </footer>
 
     </div>
   </header>
 </body>
+
 </html>
