--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" prefers-color-scheme="dark">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -12,7 +12,6 @@
 <body>
   <header class="header">
     <div class="container">
-
       <nav class="header__nav nav">
         <a href="#!" class="nav__logo"></a>
         <ul class="nav-list">
@@ -21,37 +20,35 @@
         </ul>
         <a href="#!" class="nav__logo"></a>
       </nav>
-
       <div class="header__content">
         <h1 class="header_title">Виктор "Vijor" Антонов</h1>
-        <p> Hello World! </p>
+        <p>Hello World!</p>
       </div>
-
       <div class="header__card">
         <div class="card">
           <a class="card__link" href="https://github.com/Vijorich/PagesTest">
             <div class="card__content">
-              <p> Этот </p>
-              <p> Сайт </p>
+              <p>Этот</p>
+              <p>Сайт</p>
             </div>
           </a>
         </div>
         <div class="card">
           <a class="card__link" href="https://github.com/Vijorich/Universal-windows-utility-console">
             <div class="card__content">
-              <p> Universal </p>
-              <p> Windows </p>
-              <p> Utility </p>
-              <p> Console </p>
+              <p>Universal</p>
+              <p>Windows</p>
+              <p>Utility</p>
+              <p>Console</p>
             </div>
           </a>
         </div>
       </div>
-
       <div class="details__head">
         <details>
           <summary>Панграммы</summary>
-          <p>Большой набор панграмм приводит в своём «Ководстве» А. А. Лебедев:<br />
+          <p>Большой набор панграмм приводит в своём<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE">«Ководстве»</a>
+            А. А. Лебедев:<br />
             <br />
             Без «ъ» или «ё» используются для проверки телеграфной связи (в ней данные буквы не применяются):<br />
             <br />
@@ -76,16 +73,13 @@
             хозяйства.<br />
             В GNOME используется панграмма: В чащах юга жил бы цитрус? Да, но фальшивый экземпляр!<br />
             В macOS используется панграмма: Вступив в бой с шипящими змеями — эфой и гадюкой — маленький, цепкий,
-            храбрый ёж чуть не съел их.
-          </p>
+            храбрый ёж чуть не съел их.</p>
         </details>
       </div>
-
       <footer class="footer__header">
         <p class="footer__author">made by <a class="footer__link" target="_blank"
             href="https://github.com/Vijorich">vijor</a> with 💖</p>
       </footer>
-
     </div>
   </header>
 </body>
